Reconstruction Multiple Selectioin for collectionView

--- a/ImageGotchaAction/Base.lproj/MainInterface.storyboard
+++ b/ImageGotchaAction/Base.lproj/MainInterface.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="z75-fJ-V9k">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="z75-fJ-V9k">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,9 +16,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="c22-2M-mQu" customClass="SwipeSelectingCollectionView" customModule="ImageGotchaAction" customModuleProvider="target">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="c22-2M-mQu">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2wy-CK-dNx" customClass="BasicCollectionViewFlowLayout" customModule="ImageGotchaAction" customModuleProvider="target">
                                     <size key="itemSize" width="133" height="112"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -33,7 +34,7 @@
                             <view hidden="YES" alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YxC-bp-Shy">
                                 <rect key="frame" x="0.0" y="736" width="414" height="44"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sRG-rF-tIh">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sRG-rF-tIh">
                                         <rect key="frame" x="369" y="5.6666666666666288" width="35" height="33"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="保存"/>
@@ -41,7 +42,7 @@
                                             <action selector="toSave:" destination="BY8-2a-Usb" eventType="touchUpInside" id="r34-uE-vEQ"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="72q-7f-AiD">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="72q-7f-AiD">
                                         <rect key="frame" x="10" y="5.6666666666666288" width="35" height="33"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="全选"/>
@@ -68,7 +69,8 @@
                                 </constraints>
                             </activityIndicatorView>
                         </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <viewLayoutGuide key="safeArea" id="dCk-Wg-eCG"/>
+                        <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="c22-2M-mQu" secondAttribute="bottom" id="7LZ-DR-9Zx"/>
                             <constraint firstItem="c22-2M-mQu" firstAttribute="top" secondItem="6DL-lj-UmE" secondAttribute="top" id="HJn-wI-h4X"/>
@@ -80,7 +82,6 @@
                             <constraint firstItem="dCk-Wg-eCG" firstAttribute="trailing" secondItem="YxC-bp-Shy" secondAttribute="trailing" id="bnQ-XZ-kSG"/>
                             <constraint firstItem="YxC-bp-Shy" firstAttribute="leading" secondItem="dCk-Wg-eCG" secondAttribute="leading" id="e9g-jr-gXV"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="dCk-Wg-eCG"/>
                     </view>
                     <navigationItem key="navigationItem" title="Image Gotcha" id="c7b-jK-CSi">
                         <barButtonItem key="leftBarButtonItem" title="关闭" id="Kp5-UN-oEh">
@@ -129,4 +130,12 @@
             <point key="canvasLocation" x="855" y="170"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="groupTableViewBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="groupTableViewBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
